# contractmodel

./: .gitignore  .pre-commit-config.yaml  404.html  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  CURSOR_IMPLEMENTATION_PROMPT.md  LICENSE  MANIFEST.json  README.md  ROADMAP.md  SECURITY.md  STABILITY.md  index.html  mkdocs.yml  pyproject.toml  sitemap.xml
.cursor/: rules.md
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  docs.yml  release.yml
CONTRACTMODEL_UPGRADE_PLAN/: index.html
ROADMAP/: index.html
architecture/01-system-overview/: index.html
architecture/02-canonical-contract-model/: index.html
docs/: CONTRACTMODEL_UPGRADE_PLAN.md  README.md
docs/architecture/: 01-system-overview.md  02-canonical-contract-model.md
docs/internal/: MANIFEST.json  README.md
docs/reference/: api.md  cli-library-map.md  error-codes.md
docs/roadmap/: 01-implementation-roadmap.md  02-github-epics-and-issues.md  03-data-contract-formats.md
docs/specifications/: 01-public-api.md  02-odcs-pydantic-mapping.md  03-validation-engine.md  04-diff-engine.md  05-cli-specification.md  06-plugin-sdk.md  07-semantic-contracts.md  08-contracthub-api.md  09-testing-strategy.md  10-repository-layout.md
docs/tutorials/: ci-sarif.md  cli-walkthrough.md  diff-workflow.md  getting-started.md  pydantic-roundtrip.md
examples/: customer_events.ccm.yaml  customer_events.odcs.yaml  nested_schema.ccm.yaml
examples/data/: customer_event.json
reference/api/: index.html
reference/cli-library-map/: index.html
reference/error-codes/: index.html
roadmap/01-implementation-roadmap/: index.html
roadmap/02-github-epics-and-issues/: index.html
roadmap/03-data-contract-formats/: index.html
search/: search_index.json
src/contractmodel/: __init__.py  canonical.py  contract.py  errors.py  examples.py  extensions.py  fingerprint.py  model.py  policy.py  recognition.py  versions.py  wire.py
tests/: conftest.py  test_bug_fixes.py  test_examples.py  test_patch_fixes.py  test_release_regressions.py
tests/adapters/: test_odcs_conformance.py  test_odcs_coverage_extra.py  test_odcs_detection.py  test_odcs_errors.py  test_odcs_export.py  test_odcs_extensions.py  test_odcs_import.py  test_odcs_roundtrip.py  test_pydantic_coverage.py  test_pydantic_extended.py  test_pydantic_generator.py
tests/cli/: test_app.py  test_app_extended.py
tests/contract/: __init__.py  test_contract_paths.py  test_facade.py
tests/descriptor/: test_bugfix_regressions.py  test_coverage_extra.py  test_describe.py  test_fingerprint.py  test_identity_roundtrip.py
tests/diff/: test_engine.py  test_engine_extended.py  test_nested.py  test_rules.py  (+1 more)
(+72 files in other folders)
