[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "contractmodel"
version = "0.1.2"
description = "Python-native data contracts powered by a Canonical Contract Model and Pydantic."
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [{ name = "Odo Matthews", email = "odosmatthews@gmail.com" }]
keywords = [
  "data-contracts",
  "data-contract",
  "odcs",
  "open-data-contract-standard",
  "pydantic",
  "validation",
  "json-schema",
  "data-quality",
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Software Development :: Libraries :: Python Modules",
  "Topic :: Scientific/Engineering :: Information Analysis",
  "Typing :: Typed",
]
dependencies = [
  "pydantic>=2.7",
  "pyyaml>=6.0",
  "email-validator>=2.0",
  "typer>=0.12",
  "rich>=13.0",
]

[project.optional-dependencies]
pandas = ["pandas>=2.0"]
polars = ["polars>=0.20"]
parquet = ["pyarrow>=15.0"]
semantic = ["rdflib>=7.0"]
all = [
  "pandas>=2.0",
  "polars>=0.20",
  "pyarrow>=15.0",
  "rdflib>=7.0",
]

[project.urls]
Homepage = "https://github.com/eddiethedean/contractmodel"
Repository = "https://github.com/eddiethedean/contractmodel"
Documentation = "https://eddiethedean.github.io/contractmodel/"
Changelog = "https://github.com/eddiethedean/contractmodel/blob/main/CHANGELOG.md"
Issues = "https://github.com/eddiethedean/contractmodel/issues"

[project.scripts]
contract = "contractmodel.cli.app:app"

[dependency-groups]
dev = [
  "pytest>=8.0",
  "pytest-cov>=5.0",
  "ruff>=0.6",
  "mypy>=1.11",
  "pre-commit>=3.8",
  "types-PyYAML",
  "mkdocs>=1.6",
  "mkdocs-material>=9.5",
]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.ruff.lint.per-file-ignores]
"src/contractmodel/cli/*.py" = ["B008"]

[tool.mypy]
python_version = "3.10"
strict = true
warn_return_any = true
warn_unused_configs = true
mypy_path = "src"
packages = ["contractmodel"]

[[tool.mypy.overrides]]
module = ["yaml.*", "pandas.*", "polars.*", "pyarrow.*", "rdflib.*", "numpy.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--cov=contractmodel --cov-report=term-missing"

[tool.coverage.run]
source = ["contractmodel"]
omit = ["*/tests/*"]

[tool.coverage.report]
fail_under = 94
show_missing = true
